// Copyright 2021 Linka Cloud  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package linka.cloud.test;

option go_package = "go.linka.cloud/protofilters/tests/pb;test";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Test {
  string string_field = 1;
  int64 number_field = 2;
  bool bool_field = 3;
  enum Type {
    NONE = 0;
    ONE = 1;
    TWO = 2;
  }
  Type enum_field = 4;
  Test message_field = 5;
  repeated string repeated_string_field = 6;
  repeated Type repeated_message_field = 7;
  google.protobuf.Int64Value number_value_field = 8;
  google.protobuf.StringValue string_value_field = 9;
  google.protobuf.BoolValue bool_value_field = 10;
  google.protobuf.Timestamp time_value_field = 11;
  google.protobuf.Duration duration_value_field = 12;

  optional string optional_string_field = 13;
  optional int64 optional_number_field = 14;
  optional bool optional_bool_field = 15;
  optional Type optional_enum_field = 16;
}
